# santuario-nazare-cohatrac

./: .gitignore  Dockerfile  fly.toml  pyproject.toml  requirements.txt
.github/workflows/: deploy-fly.yml
core/: settings.py  urls.py
home/: views.py
home/templates/home/: index.html
static/css/: style.css
static/js/: site.js
templates/: 404.html  500.html  base.html
