[tool.poetry]
name = "santuario-nazare-cohatrac"
version = "0.1.0"
description = ""
authors = ["Dyemerson <dyemersonsousa@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<4.0"
django = "^5.2.7"
django-tailwind = "^4.2.0"
django-browser-reload = "^1.21.0"
whitenoise = "^6.11.0"
psycopg2-binary = "^2.9"
dj-database-url = "^2.1"
gunicorn = "^23.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
